@@ -1,5 +1,7 @@
 2007-01-05  Scott James Remnant  <scott@netsplit.com>
 
+	* logd/main.c (main): Make sure that we add the SIGTERM handler.
+
 	* init/tests/test_job.c (test_run_script): This test case relies
 	on there only being one file descriptor watch, which won't be true
 	if the control socket has been opened because there's a message to
